@@ -7,3 +7,4 @@ logs
 /profiles
 /virtualKeyboards.xml
 /TODO
+/events.txt
