@@ -4,7 +4,7 @@
 	<groupId>eu.transkribus</groupId>
 	<artifactId>TranskribusSwtGui</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8.4</version>
+	<version>0.8.5</version>
 	<!-- <version>0.4.6</version> -->
 	<name>Transkribus</name>
 
